log
Sun Mar 22 07:38:25 PM UTC 2026: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
13d3df6
Sun Mar 22 07:41:09 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
b783957
Sun Mar 22 08:17:16 PM UTC 2026: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:7: error: dereferencing ‘void *’ pointer [-Werror]
   48 |       *dato = i;
      |       ^~~~~
exercises.c:48:13: error: invalid use of void expression
   48 |       *dato = i;
      |             ^
cc1: all warnings being treated as errors
196745c
Sun Mar 22 08:19:23 PM UTC 2026: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:9: error: ‘dato’ undeclared (first use in this function)
   51 |    free(dato);
      |         ^~~~
exercises.c:51:9: note: each undeclared identifier is reported only once for each function it appears in
a58e6ae
Sun Mar 22 08:21:06 PM UTC 2026: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|4
total_score: 10/70
f5ad628
Sun Mar 22 08:21:57 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
4547f0e
Sun Mar 22 08:29:22 PM UTC 2026: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:4: error: expected ‘,’ or ‘;’ before ‘while’
   62 |    while (elemento != NULL){
      |    ^~~~~
exercises.c:61:10: error: unused variable ‘elemento’ [-Werror=unused-variable]
   61 |    void* elemento = first(L)
      |          ^~~~~~~~
cc1: all warnings being treated as errors
522da3e
Sun Mar 22 08:44:27 PM UTC 2026: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:13: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   63 |       total += elemento;
      |             ^~
9e49ba1
Sun Mar 22 08:44:40 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 30/70
7559f90
Sun Mar 22 09:06:05 PM UTC 2026: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:81:15: error: comparison between pointer and integer [-Werror]
   81 |       if (aux == elem){
      |               ^~
cc1: all warnings being treated as errors
0888fbb
Sun Mar 22 09:06:20 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
8aba7f3
Sun Mar 22 10:39:26 PM UTC 2026: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:118:21: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Wint-conversion]
  118 |          push(pila, i);
      |                     ^
      |                     |
      |                     int
In file included from exercises.c:7:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
169312b
Sun Mar 22 10:41:51 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
0ab5c81
Sun Mar 22 10:44:56 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
c21c114
